--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,42 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --color-primary: #0275d8; 
+  --color-success: #4BB543; 
+  --color-warning: #f0ad4e; 
+  --color-danger: #d9534f; 
+  --color-dark: #292b2c; 
+  --color-dark-shadow: #292b2cb0; 
+  --color-white: #fff; 
+}
 
 main {
-    min-height: 100vh;
+  width: 100wv;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+form {
+  width: max-content;
+  height: max-content;
+  padding: 15px 50px;
+  border-radius: 15px;
+  box-shadow: 0px 0px 5px var(--color-dark-shadow);
+}
+
+.form-item {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.button-submit {
+  width: 100%;
+}
+.button-submit button{
+  float: right;
 }
